--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,19 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
+
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
     }
 }
 
