--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
 
+    // tess-two tool for Tesseract using on Android
+    compile 'com.rmtheis:tess-two:5.4.1'
+
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
@@ -71,4 +74,5 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.1"
     testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:1.7.0"
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
