--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ spoon {
 }
 
 dependencies {
+    compile 'com.jakewharton:butterknife:8.1.0'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
 
