--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,11 @@ spoon {
 }
 
 dependencies {
-    compile 'com.jakewharton:butterknife:8.1.0'
+    // bind view by R.id
+    // http://jakewharton.github.io/butterknife/
+    // compile 'com.jakewharton:butterknife:8.1.0'
+    // http://projects.spring.io/spring-android/
+    // compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
