--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ allprojects {
     }
 }
 
+/*repositories {
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
+}*/
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
