--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,3 +82,5 @@ dependencies {
     testCompile "org.assertj:assertj-core:1.7.0"
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
+
+defaultTasks 'spoon', 'clean', 'run'
