--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,22 +24,27 @@
         </activity>
         <activity android:name=".MainActivity">
         </activity>
-        <activity android:name=".DriverActivity" android:label="@string/check_driver">
+        <activity android:name=".driver.DriverActivity" android:label="@string/check_driver">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".CarActivity" android:label="@string/check_car">
+        <activity android:name=".car.CarActivity" android:label="@string/check_car">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".FineActivity" android:label="@string/check_fine">
+        <activity android:name=".fine.FineActivity" android:label="@string/check_fine">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".QuestionActivity" android:label="@string/check_question">
+        <activity android:name=".question.QuestionActivity" android:label="@string/check_question">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".question.QuestionActivityNext" android:label="@string/check_question">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
