При нажатии на кнопку назад на странице "Прием обращений 2 часть" возвращаемся на страницу "Прием обращений 1 часть"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         <activity android:name=".question.QuestionActivityNext" android:label="@string/check_question">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".question.QuestionActivity" />
         </activity>
     </application>
 
