изменил структуру проекта:
тип хапроса:
  activity
  service
  model

тип хапроса 2:
  activity
  service
  model

добавил зависимости:
compile 'com.squareup.retrofit2:converter-jackson:2.0.0'
compile 'com.squareup.retrofit2:retrofit:2.0.0'
compile 'com.squareup.retrofit2:converter-gson:2.0.0'
compile 'com.squareup.okhttp3:okhttp:3.1.2' // кэш

compile 'io.reactivex:rxjava:1.1.1'
compile 'io.reactivex:rxandroid:1.1.0'
compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'

apt 'com.jakewharton:butterknife-compiler:8.0.1' // bind @BindView
provided "org.projectlombok:lombok:1.16.8"
compile 'com.squareup.picasso:picasso:2.5.2' // для загрузки изображений с сервера
compile 'com.squareup.okhttp:okhttp:2.4.0'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".BootApplication"
         android:allowBackup="true"
         android:icon="@mipmap/main_logo"
         android:label="Сервисы ГИБДД"
@@ -24,30 +25,30 @@
         </activity>
         <activity android:name=".MainActivity">
         </activity>
-        <activity android:name=".driver.DriverActivity" android:label="@string/check_driver">
+        <activity android:name=".driver.activity.DriverActivity" android:label="@string/check_driver">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".car.CarActivity" android:label="@string/check_car">
+        <activity android:name=".car.activity.CarActivity" android:label="@string/check_car">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".fine.FineActivity" android:label="@string/check_fine">
+        <activity android:name=".fine.activity.FineActivity" android:label="@string/check_fine">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".question.QuestionActivity" android:label="@string/check_question">
+        <activity android:name=".question.activity.QuestionActivity" android:label="@string/check_question">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".question.QuestionActivityNext" android:label="@string/check_question">
+        <activity android:name=".question.activity.QuestionActivityNext" android:label="@string/check_question">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".question.QuestionActivity" />
+                android:value=".question.activity.QuestionActivity" />
         </activity>
     </application>
 
