--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".fine.activity.ResultFineActivity" android:label="@string/check_fine">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".fine.activity.RequestFineActivity" />
+        </activity>
         <activity android:name=".question.activity.QuestionActivity" android:label="@string/check_question">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
