Travis CI Android Tests: no connected devices http://stackoverflow.com/questions/31264136/travis-ci-android-tests-no-connected-devices

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ android:
     - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
+env:
+  global:
+   # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
