--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,23 @@
 language: android
 before_install:
   - chmod +x gradlew
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+before_script:
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 after_failure:
   - cat /home/travis/build/android-group/gibdd-service/app/build/outputs/lint-results-debug.xml
   - cat /home/travis/build/android-group/gibdd-service/app/build/outputs/lint-results-debug.html
   - cat /home/travis/build/android-group/gibdd-service/app/build/reports/tests/debug/index.html
+script: "./gradlew assembleDebug connectedCheck"
 android:
   components:
-    - tools
     - platform-tools
+    - tools
     - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
-env:
-  global:
-   # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=20
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - sys-img-armeabi-v7a-android-23
