--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/main_logo"
+        android:icon="@mipmap/ic_main"
         android:label="Сервисы ГИБДД"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
