--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "ru.android_studio.gibdd_servis"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionName "1.0.0"
         versionCode 1
 
@@ -66,7 +66,7 @@ dependencies {
     // compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
 
     // tess-two tool for Tesseract using on Android
     compile 'com.rmtheis:tess-two:5.4.1'
@@ -75,7 +75,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
     // Testing-only dependencies
-    androidTestCompile 'com.android.support:support-annotations:23.4.0'
+    androidTestCompile 'com.android.support:support-annotations:24.2.1'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
 
@@ -109,6 +109,10 @@ dependencies {
     provided "org.projectlombok:lombok:1.16.8"
     compile 'com.squareup.picasso:picasso:2.5.2' // для загрузки изображений с сервера
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    // Required -- JUnit 4 framework
+    testCompile 'junit:junit:4.12'
+    // Optional -- Mockito framework
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
 
 defaultTasks 'spoon', 'clean', 'run'
