--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,10 @@ dependencies {
     // compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.android.support:gridlayout-v7:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 
     // tess-two tool for Tesseract using on Android
     compile 'com.rmtheis:tess-two:5.4.1'
