--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         </activity>
         <activity android:name=".MainActivity">
         </activity>
+        <activity android:name=".common.NoDataFoundActivity">
+        </activity>
+        <activity android:name=".common.CaptchaNumberIsNotValid">
+        </activity>
         <activity android:name=".driver.activity.RequestDriverActivity" android:label="@string/check_driver">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
