--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'spoon'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 24
@@ -72,6 +73,7 @@ dependencies {
 
     compile 'com.android.support:cardview-v7:24.2.+'
     compile 'com.android.support:recyclerview-v7:24.2.+'
+    compile 'com.google.firebase:firebase-ads:9.8.0'
 
     // tess-two tool for Tesseract using on Android
     compile 'com.rmtheis:tess-two:5.4.1'
