поднял sdk версию до 25, версию приложения до 1.0.7 и перенастроил TravisCI

--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,9 @@ allprojects {
         jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         mavenCentral()
+        mavenLocal()
     }
 }
-
-/*repositories {
-    maven {
-        url 'https://repo.spring.io/libs-milestone'
-    }
-}*/
 
 task clean(type: Delete) {
     delete rootProject.buildDir
