--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,26 +5,28 @@ apply plugin: 'realm-android'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "ru.android_studio.gibdd_servis"
         minSdkVersion 15
-        targetSdkVersion 24
-        versionName "1.0.6"
-        versionCode 6
-
+        targetSdkVersion 25
+        versionCode 7
+        versionName "1.0.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        debug {
+        release {
             testCoverageEnabled true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
-        release {
-            minifyEnabled false
+        debug {
+            minifyEnabled true
+            testProguardFile 'test-proguard-rules.pro'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -61,6 +63,10 @@ spoon {
     codeCoverage = false
 }
 
+configurations.all {
+    resolutionStrategy.force 'com.android.support:support-annotations:25.0.1'
+}
+
 dependencies {
     // bind view by R.id
     // http://jakewharton.github.io/butterknife/
@@ -72,30 +78,28 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:gridlayout-v7:24.2.+'
-    compile 'com.android.support:appcompat-v7:24.2.+'
+    compile 'com.android.support:gridlayout-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
 
-    compile 'com.android.support:cardview-v7:24.2.+'
-    compile 'com.android.support:recyclerview-v7:24.2.+'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
 
     // firebase
     compile 'com.google.firebase:firebase-core:10.0.0'
     compile 'com.google.firebase:firebase-ads:10.0.0'
     compile 'com.google.firebase:firebase-crash:10.0.0'
-
     // tess-two tool for Tesseract using on Android
     compile 'com.rmtheis:tess-two:5.4.1'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compile 'org.apache.commons:commons-lang3:3.0'
 
     // Testing-only dependencies
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
 
     // UiAutomator Testing
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     androidTestCompile 'org.hamcrest:hamcrest-integration:1.3'
 
     // automate testing ui
