--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".NotInternetActivity"></activity>
         <activity
             android:name=".driver.activity.RequestDriverActivity"
             android:label="@string/check_driver">
